apps/scrutiny/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scrutiny
  labels:
    app.kubernetes.io/name: scrutiny
