apps/scrutiny/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrutiny-influxdb
  namespace: scrutiny
spec:
  selector:
    app.kubernetes.io/name: scrutiny
    app.kubernetes.io/component: influxdb
  ports:
    - name: http
      port: 8086
      targetPort: 8086
